add query by params

--- a/data/docker-compose.yml
+++ b/data/docker-compose.yml
@@ -1,11 +1,14 @@
 version: "2"
 x-redash-service: &redash-service
-  image: redash/redash:8.0.0.b32245
+  image: redash/redash:9.0.0-beta.b42121
   depends_on:
     - postgres
     - redis
-  env_file: /opt/redash/env
+  env_file: ./env
   restart: always
+  volumes:
+    - ./query-with-params/parameter_supported_query_results.py:/app/redash/query_runner/parameter_supported_query_results.py
+    - ./query-with-params/parametersupportedresults.png:/app/client/dist/images/db-logos/parametersupportedresults.png
 services:
   server:
     <<: *redash-service
@@ -17,9 +20,6 @@ services:
   scheduler:
     <<: *redash-service
     command: scheduler
-    environment:
-      QUEUES: "celery"
-      WORKERS_COUNT: 1
   scheduled_worker:
     <<: *redash-service
     command: worker
@@ -37,9 +37,9 @@ services:
     restart: always
   postgres:
     image: postgres:9.6-alpine
-    env_file: /opt/redash/env
+    env_file: ./env
     volumes:
-      - /opt/redash/postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
     restart: always
   nginx:
     image: redash/nginx:latest
@@ -50,3 +50,9 @@ services:
     links:
       - server:redash
     restart: always
+  worker:
+    <<: *redash-service
+    command: worker
+    environment:
+      QUEUES: "periodic emails default"
+      WORKERS_COUNT: 1
